force-app/main/default/objects/credit_card_debt__c/credit_card_debt__c.object-meta.xml
<CustomObject>
    <label>credit card debt</label>
    <nameField>
        <label>credit card debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>credit card debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>