force-app/main/default/objects/credit_card_debt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>credit card debts</relationshipLabel>
    <relationshipName>credit_card_debts</relationshipName>
    <type>Lookup</type>
</CustomField>