force-app/main/default/objects/credit_card_debt__c/fields/coment__c.field-meta.xml
<CustomField>
    <fullName>coment__c</fullName>
    <label>comment</label>
    <type>TextArea</type>
</CustomField>