force-app/main/default/objects/credit_card_debt__c/fields/dias_mora__c.field-meta.xml
<CustomField>
    <fullName>dias_mora__c</fullName>
    <label>dias mora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>