force-app/main/default/objects/credit_card_debt__c/fields/monto_vencido__c.field-meta.xml
<CustomField>
    <fullName>monto_vencido__c</fullName>
    <label>monto vencido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>