force-app/main/default/objects/credit_card_debt__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>product</label>
    <type>TextArea</type>
</CustomField>